p2/scripts/kubernetes_manifests/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-1
  template:
    metadata:
      labels:
        app: hello-world-1
    spec:
      containers:
        - name: hello-world-1
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: html-volume
      volumes:
        - name: html-volume
          hostPath:
            path: /vagrant/hello-world-1
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-1-service
spec:
  selector:
    app: hello-world-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
