p2/scripts/kubernetes_manifests/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world-2
  template:
    metadata:
      labels:
        app: hello-world-2
    spec:
      containers:
        - name: hello-world-2
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: html-volume
      volumes:
        - name: html-volume
          hostPath:
            path: /vagrant/hello-world-2
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-2-service
spec:
  selector:
    app: hello-world-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
